--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,5 +1,5 @@
 #summary One-sentence summary of this page.
 
 = Introduction =
-一个如果使用0.2版的ris-autoinst的视频：
+一个如何使用0.2版的ris-autoinst的视频：
 http://www.boobooke.com/v/bbk1432/
