Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,4 +1,5 @@
-#0.2版的ris-autoinst的安装视频：http://www.boobooke.com/v/bbk1432/
+#0.2版的ris-autoinst的安装视频
+http://www.boobooke.com/v/bbk1432/
 
 = Introduction =
 一个如何使用0.2版的ris-autoinst的视频：
